--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,6 @@
         <div>
             <div class="search-bar-wrapper" id="searchBarWrapper">
                 <input id="mainSearch" class="main-search" type="text" placeholder="Search..." autocomplete="on">
-                <button id="searchBtn" class="search-btn"><i class="fas fa-search"></i></button>
                 <button id="voiceBtn" class="voice-btn" title="Voice Search"><i class="fas fa-microphone"></i></button>
                 <button id="imageBtn" class="image-btn" title="Image Search"><i class="fas fa-camera"></i></button>
             </div>
@@ -105,7 +104,7 @@
                             </div>
                         </div>
 
-                        <div class="filter-section">
+                        <!-- <div class="filter-section">
                             <div class="filter-title"><i class="fas fa-tag me-2"></i>Brand</div>
                             <div class="filter-search-container">
                                 <input type="text" id="brandSearchInput" class="filter-search-input"
@@ -132,7 +131,8 @@
                         </div>
 
                         <button class="clear-filters" id="clearFilters"><i class="fas fa-undo me-2"></i>Clear
-                            filters</button>
+                            filters
+                        </button> -->
                     </div>
                 </div>
 
