--- a/static/index.html
+++ b/static/index.html
@@ -104,7 +104,7 @@
                             </div>
                         </div>
 
-                        <!-- <div class="filter-section">
+                        <div class="filter-section">
                             <div class="filter-title"><i class="fas fa-tag me-2"></i>Brand</div>
                             <div class="filter-search-container">
                                 <input type="text" id="brandSearchInput" class="filter-search-input"
@@ -132,7 +132,7 @@
 
                         <button class="clear-filters" id="clearFilters"><i class="fas fa-undo me-2"></i>Clear
                             filters
-                        </button> -->
+                        </button>
                     </div>
                 </div>
 
